--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,9 @@
-<p> Titulo </p>
+<html lang="es" dir="ltr" class="inited">
+  <head>
+    <title>Dibujar figuras</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  </head>
+  <body>
+      <h3>Dibujar figuras</h3>
+  </body>
+</html>
